add "/me" to doc, make this endpoint GET instead of POST
